   Oct 2006: 0.2.17 Miek <miek@miek.nl>
   -- non backwards update --
   * mirror.pl: remove the YYYYMM suffix for backup directory
   * mirror.sh: remove the YYYYMM suffix for backup directory
   * dump.sh will now add this suffix!

   * added rdup.cron example
   * added grep.pl, grep.pl.1 manual page
     grep.pl now only works on filenames and links
   * grep.pl/gzip.pl/crypt.pl: small refactoring to make them 
     smaller
   * sh-restore is REMOVED, there are now special restore utils
     anymore.
   * Doc: moved all docs over to the perl versions of the utils.
   * Making backups with 0.2.17:
   	dump.sh -b /vol/backup/$HOSTNAME dir-to-back-up
	YYYYMM will be added

	mirror.pl will use the -b argument as-is, no magic
	there.
   * Restoring backups with 0.2.17:
	


18 Sep 2006: 0.2.16 Miek <miek@miek.nl>
   -- bugfixes and moved to the perl utils --
   rdup:
   * some compilation updates for Solaris 10 (dirdf)
   * small documentation updates
   configure:
   * added check for GNU make (isn't used yet)
   scripts:
   * All sizes are report in MB
   * mirror.pl: major fixes: use the correct backup dir
     and correct -c.
     Allow multiple -b options to backup to different directories
     at the same time
     The -b argument is mandatory, but can now be given
     multiple times.
   * dump.sh: use the perl tools! Added -x option.
     The -b argument is mandatory, but can now be given
     multiple times.
     The $HOST directory isn't added by default! Now you need
     to specify: -b /vol/backup/$HOST
   * dump-here.sh: use perl tools too.
   * Added crypt.pl - a perl version crypt.sh


1 Sep 2006: 0.2.15 Miek <miek@miek.nl>
   scripts:
   * refactored mirror.sh, rorrim.sh, monthday.sh, mirror.pl
   * dump.sh: more quotes for dirs with spaces. Re-add trailing spaces 
     to path names
   * coding style changes to the perl scripts.
   * rdup: add -l (local) option. Disable size checking for
     files when doing a local backup and don't skip the file.